--- a/css/user_index.css
+++ b/css/user_index.css
@@ -6,9 +6,11 @@ body{
 .index_header {
     width: 100%;
     height: 60px;
-    position: relative;
+    position: fixed;
+    top: 0;
     margin: 0 auto;
     background-color: #000;
+    z-index: 999;
 }
 
 .header_left{
@@ -136,6 +138,8 @@ li{
 .index_content{
     width: 1016px;
     margin: 0 auto;
+    position: relative;
+    top: 60px;
 }
 
 #user_so{
