--- a/css/phuser_index.css
+++ b/css/phuser_index.css
@@ -90,7 +90,7 @@
     width: 245px;
     height: 185px;
     margin: 0 auto;
-    background-color: #1E9FFF;
+    /*background-color: #1E9FFF;*/
     position: inherit;
     top: 30px;
 }
